--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
 
-    <style>html,body{background:#222;}</style>
+
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <link href="fonts/fonts.css" type="text/css" rel="stylesheet" />
   </head>
-  <body bgcolor="#222222">
+  <body>
     <div id="container">
         <div id="title" class="screen show01 hide0 hide1 hidehs" data-action="close-titleScreen">
             <div class="vertical">
@@ -46,7 +46,7 @@
 
                 </div>
                 <p>
-                    a little logic game<br>by Q42
+                    a little logic game<br>enjoy 
                 </p>
             </div>
         </div>
@@ -71,16 +71,15 @@
             <h3>About</h3>
             <p>
             0h h1 is a little logic game<br>
-            by Q42.<br>
+            for Marie-Eve and Rosalie<br>
             <br>
-            It was created by<br>
+            It was originally created by<br>
             Martin Kool.<br>
             <br>
             The concept is also known<br>
             as Takuzu or Binairo.<br>
             <br>
-            (c) 2014<br>
-            www.q42.com
+            (c) 2021<br>
             </p>
             </div>
         </div>
